--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
+    maven {url 'file:///F:/m2/repository'}
     maven { url 'file:///D:/m2/repo/' }
     mavenCentral()
 }
