--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     maven {url 'http://aliyun.jeqah.cn:8081/repository/maven-public/'}
     mavenCentral()
 }
