--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 repositories {
     mavenLocal()
     maven {url 'http://aliyun.jeqah.cn:8081/repository/maven-public/'}
