geek time: 深度优先搜索

--- a/geek-time/pom.xml
+++ b/geek-time/pom.xml
@@ -4,5 +4,18 @@
     <groupId>com.xiaoqiang</groupId>
     <artifactId>geek-time</artifactId>
     <version>1.0-snapshot</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
