--- a/algs-interview/pom.xml
+++ b/algs-interview/pom.xml
@@ -4,5 +4,17 @@
     <groupId>com.xiaoqiang</groupId>
     <artifactId>algs-interview</artifactId>
     <version>1.0-snapshot</version>
-
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
