--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
                 <artifactId>commons</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>edu.princeton.cs</groupId>
+                <artifactId>algs4</artifactId>
+                <version>1.0.0.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
