二分查找以及基本四种变形问题的练习以及总结

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>commons</module>
         <module>leet-code</module>
         <module>sort</module>
+        <module>search</module>
     </modules>
 
     <build>
